refact: replace collection of to list